# torchdgl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands.json  in_degree.pt  t.py  test_gat.py  test_gcn.py  test_spmm.py  test_th.py
examples/GAT/: GAT_DGL.py  GAT_PyG.py  GAT_Script.py  train.py
include/torchdglgraph/: adjmatrix.h  torch_dgl_graph.h  utils.h
src/: adjmatrix.cc  edge_softmax.cc  infer.cc  sddmm.cc  spmm.cc  test.cc  torch_dgl_graph.cc  utils.cc
test/Ops/: test_EdgeSoftmax.py  test_GSDDMM.py  test_GSpMM.py
